; ModuleID = '/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_main.c_dbdiff.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_main.c_dbdiff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dbdiff_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @dbdiff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dbdiff(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32* @sdb_new(i32* null, i8* %8, i32 0)
  store i32* %9, i32** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32* @sdb_new(i32* null, i8* %10, i32 0)
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* @dbdiff_cb, align 4
  %15 = call i32 @sdb_diff(i32* %12, i32* %13, i32 %14, i32* null)
  store i32 %15, i32* %7, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @sdb_free(i32* %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @sdb_free(i32* %18)
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32* @sdb_new(i32*, i8*, i32) #1

declare dso_local i32 @sdb_diff(i32*, i32*, i32, i32*) #1

declare dso_local i32 @sdb_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
